--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+.cards{
+    border: 1px solid black;
+    width: 1200px;
+    border-radius: 20px;
+    padding: 20px;
+    margin: 20px;
+    margin-left: 100px;
+    display: flex;
+    background-color: rgba(31,31,31,255);
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.imgsize{
+    width: 200px;
+    height: 200px;
+    border-radius: 20px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.leftspace{
+    padding-left: 20px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.body{
+    background-color: rgba(41,42,45,255);
 }
-
-.App-link {
-  color: #61dafb;
+.whitetxt{
+    color: aliceblue;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.latestnews{
+    text-align: center;
+    color: aliceblue;
+}
+.nav{
+    display: flex;
+    color: aliceblue;
+}
+.navcontainer{
+    background-color: rgba(31,31,31,255);
+}li{
+    padding: 20px 0px;
+    padding-left: 100px;
+    list-style-type: none;
+}
+li:hover{
+    cursor: pointer;
+    color: aqua;
+}
+a{
+    text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
+    text-decoration-color: aliceblue;
+    cursor: pointer;
 }
